--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web Pack Demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/sunilnitw/webpack-demo/issues"
   },
-  "homepage": "https://github.com/sunilnitw/webpack-demo#readme"
+  "homepage": "https://github.com/sunilnitw/webpack-demo#readme",
+  "devDependencies": {
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7"
+  }
 }
