--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/sunilnitw/webpack-demo#readme",
   "devDependencies": {
     "bootstrap": "^4.3.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.3.1",
